fix: change config

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,32 @@
 </head>
 
 <body>
-  <h1>hello</h1>
+  <header class="main-header">
+    <div class="container">
+      <div class="logo">
+        <a href="/">MSB</a>
+      </div>
+    </div>
+  </header>
+  <nav class="navigation">
+    <ul class="navigation-list">
+      <li class="navigation-item">
+        <a href="/">Home</a>
+      </li>
+      <li class="navigation-item">
+        <a href="/">Discover</a>
+      </li>
+      <li class="navigation-item">
+        <a href="/">Popular</a>
+      </li>
+      <li class="navigation-item">
+        <a href="/">Movies</a>
+      </li>
+      <li class="navigation-item">
+        <a href="/">TV Series</a>
+      </li>
+    </ul>
+  </nav>
 </body>
 
 </html>
