--- a/src/index.html
+++ b/src/index.html
@@ -4,24 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Document</title>
 </head>
 
 <body>
-  <header class="main-header">
-    <div class="container">
+  <header class="header">
+    <div class="container header-container">
       <div class="logo">
         <a href="/">MSB</a>
-      </div>
-      <div class="search">
-        <form action="/search.html" class="search-form">
-          <div class="search-field">
-            <input type="text" id="search-term" name="search-term" placeholder="Search for anything">
-            <button class="btn" type="submit">
-              <i class="fas fa-search"></i>
-            </button>
-          </div>
-        </form>
       </div>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -42,6 +38,17 @@
           </li>
         </ul>
       </nav>
+      <div class="search">
+        <form action="/search.html" class="search-form">
+          <div class="search-field">
+            <input class="search-input" type="text" id="search-term" name="search-term"
+              placeholder="Search for anything">
+            <button class="search-btn" type="submit">
+              <i class="fas fa-search"></i>
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
   </header>
   <main class="main-content">
