feat: add highlight active link function and related styles

--- a/src/index.html
+++ b/src/index.html
@@ -22,20 +22,20 @@
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a href="/">Home</a>
+            <a class="navigation-link" href="/">Home</a>
           </li>
           <li class="navigation-item">
-            <a href="/">Movies</a>
+            <a class="navigation-link" href="/movies.html">Movies</a>
           </li>
           <li class="navigation-item">
-            <a href="/">TV Series</a>
+            <a class="navigation-link" href="/series.html">TV Series</a>
           </li>
           <li class="navigation-item">
-            <a href="/">People</a>
+            <a class="navigation-link" href="/people.html">People</a>
           </li>
-          <li class="navigation-item">
-            <a href="/">More</a>
-          </li>
+          <!-- <li class="navigation-item">
+            <a class="navigation-link" href="/">More</a>
+          </li> -->
         </ul>
       </nav>
       <div class="search">
