feat: add displaying slider cards functionality and coresponding styles

--- a/src/index.html
+++ b/src/index.html
@@ -67,25 +67,8 @@
           </a>
         </div>
         <div class="top-movies-slider slider">
-          <div class="slider-container">
-            <div class="top-movies-card card">
+          <div class="slider-container top-movies-slider-container">
 
-            </div>
-            <div class="top-movies-card card">
-
-            </div>
-            <div class="top-movies-card card">
-
-            </div>
-            <div class="top-movies-card card">
-
-            </div>
-            <div class="top-movies-card card">
-
-            </div>
-            <div class="top-movies-card card">
-
-            </div>
           </div>
         </div>
       </section>
@@ -97,28 +80,8 @@
           </a>
         </div>
         <div class="top-series-slider slider">
-          <div class="slider-container">
-            <div class="top-series-card card">
+          <div class="slider-container top-series-slider-container">
 
-            </div>
-            <div class="top-series-card card">
-
-            </div>
-            <div class="top-series-card card">
-
-            </div>
-            <div class="top-series-card card">
-
-            </div>
-            <div class="top-series-card card">
-
-            </div>
-            <div class="top-series-card card">
-
-            </div>
-            <div class="top-series-card card">
-
-            </div>
           </div>
         </div>
       </section>
