--- a/src/movie-details.html
+++ b/src/movie-details.html
@@ -10,9 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <title>
-    home
-  </title>
+  <title>Document</title>
 </head>
 
 <body>
@@ -54,39 +52,54 @@
     </div>
   </header>
   <main class="main-content">
-    <div class="container">
-      <section class="hero-showcase section-mb">
-        <div class="hero-text">
-          <h1>Now Trending</h1>
-          <img class="hero-image" src="https://picsum.photos/id/1038/600/400" alt="">
-        </div>
-      </section>
-      <section class="top-movies section-mb">
-        <div class="top-movies-header top-header">
-          <h2 class="top-movies-title top-title">Top-rated movies</h2>
-          <a class="top-movies-all btn-all" href="/">view all
-            <i class="fa-solid fa-chevron-right"></i>
-          </a>
-        </div>
-        <div class="top-movies-slider slider">
-          <div class="slider-container top-movies-slider-container">
+    <div class="container movie-details-container">
+      <div class="back-home">
+        <a class="btn btn-back" href="/index.html">Back To Home</a>
+      </div>
+      <div class="movie-details">
+        <div class="details-top">
 
+          <h3 class="details-title-main">Title</h3>
+          <div class="details-tagline">Tagline</div>
+          <div class="details-overview">
+            <h3>Overview</h3>
+          </div>
+          <div class="details-info">
+            <div class="details-vote">
+              <h4></h4>
+              8 / 10 <span>(12k)</span>
+            </div>
+            <div class="details-runtime">60 min</div>
+          </div>
+          <div class="details-authors">
+            created by
           </div>
         </div>
-      </section>
-      <section class="top-series section-mb">
-        <div class="top-series-header top-header">
-          <h2 class="top-series-title top-title">Top-rated TV series</h2>
-          <a class="top-series-all btn-all" href="/">view all
-            <i class="fa-solid fa-chevron-right"></i>
-          </a>
-        </div>
-        <div class="top-series-slider slider">
-          <div class="slider-container top-series-slider-container">
 
+      </div>
+      <div class="details-bottom">
+        <div class="details-cast">
+          <div class="details-cast-slider">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
           </div>
         </div>
-      </section>
+        <div class="details-reviews">
+          <h3>Reviews</h3>
+          <div class="reviews-container">
+            <div class="review-card"></div>
+          </div>
+        </div>
+        <div class="details-similar">
+          <h3>More Like This</h3>
+          <div class="similar-container">
+            <div class="similar-card"></div>
+          </div>
+        </div>
+      </div>
+    </div>
     </div>
   </main>
 </body>
