fix: change movie info layout

--- a/src/movie-details.html
+++ b/src/movie-details.html
@@ -56,49 +56,51 @@
       <div class="back-home">
         <a class="btn btn-back" href="/index.html">Back To Home</a>
       </div>
-      <div class="movie-details">
-        <div class="details-top">
+      <section class="movie-details section-mb">
+        <!-- <div class="details-top">
 
           <h3 class="details-title-main">Title</h3>
-          <div class="details-tagline">Tagline</div>
-          <div class="details-overview">
-            <h3>Overview</h3>
-          </div>
           <div class="details-info">
+            <div class="details-year">
+              <span>2024</span>
+            </div>
             <div class="details-vote">
-              <h4></h4>
               8 / 10 <span>(12k)</span>
             </div>
             <div class="details-runtime">60 min</div>
+          </div>
+          <div class="details-tagline">Tagline</div>
+          <div class="details-overview">
+            <h3>Overview</h3>
           </div>
           <div class="details-authors">
             created by
           </div>
         </div>
+        <div class="details-bottom">
+          <div class="details-cast">
+            <div class="details-cast-slider">
+              <div class="card"></div>
+              <div class="card"></div>
+              <div class="card"></div>
+              <div class="card"></div>
+            </div>
+          </div>
+          <div class="details-reviews">
+            <h3>Reviews</h3>
+            <div class="reviews-container">
+              <div class="review-card"></div>
+            </div>
+          </div>
+          <div class="details-similar">
+            <h3>More Like This</h3>
+            <div class="similar-container">
+              <div class="similar-card"></div>
+            </div>
+          </div>
+        </div> -->
+      </section>
 
-      </div>
-      <div class="details-bottom">
-        <div class="details-cast">
-          <div class="details-cast-slider">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-          </div>
-        </div>
-        <div class="details-reviews">
-          <h3>Reviews</h3>
-          <div class="reviews-container">
-            <div class="review-card"></div>
-          </div>
-        </div>
-        <div class="details-similar">
-          <h3>More Like This</h3>
-          <div class="similar-container">
-            <div class="similar-card"></div>
-          </div>
-        </div>
-      </div>
     </div>
     </div>
   </main>
