feat: add display movie cast functions and corresponding styles

--- a/src/movie-details.html
+++ b/src/movie-details.html
@@ -54,38 +54,16 @@
   <main class="main-content">
     <div class="container movie-details-container">
       <div class="back-home">
-        <a class="btn btn-back" href="/index.html">Back To Home</a>
+        <a class="btn btn-back" href="/index.html"><i class="fa-solid fa-chevron-left"></i>Back To Home Page</a>
       </div>
       <section class="movie-details section-mb">
-        <!-- <div class="details-top">
 
-          <h3 class="details-title-main">Title</h3>
-          <div class="details-info">
-            <div class="details-year">
-              <span>2024</span>
-            </div>
-            <div class="details-vote">
-              8 / 10 <span>(12k)</span>
-            </div>
-            <div class="details-runtime">60 min</div>
-          </div>
-          <div class="details-tagline">Tagline</div>
-          <div class="details-overview">
-            <h3>Overview</h3>
-          </div>
-          <div class="details-authors">
-            created by
-          </div>
-        </div>
-        <div class="details-bottom">
-          <div class="details-cast">
-            <div class="details-cast-slider">
-              <div class="card"></div>
-              <div class="card"></div>
-              <div class="card"></div>
-              <div class="card"></div>
-            </div>
-          </div>
+      </section>
+
+      <section class="movie-cast">
+        <div class="details-cast slider-container">
+
+
           <div class="details-reviews">
             <h3>Reviews</h3>
             <div class="reviews-container">
@@ -98,8 +76,9 @@
               <div class="similar-card"></div>
             </div>
           </div>
-        </div> -->
-      </section>
+        </div>
+    </div>
+    </section>
 
     </div>
     </div>
