feat: add display movie revews section

--- a/src/movie-details.html
+++ b/src/movie-details.html
@@ -60,27 +60,24 @@
 
       </section>
 
-      <section class="movie-cast">
+      <section class="movie-cast section-mb">
+        <h4 class="details-title-secondary">Top Cast</h4>
         <div class="details-cast slider-container">
 
-
-          <div class="details-reviews">
-            <h3>Reviews</h3>
-            <div class="reviews-container">
-              <div class="review-card"></div>
-            </div>
-          </div>
-          <div class="details-similar">
+        </div>
+        <!-- <div class="details-similar">
             <h3>More Like This</h3>
-            <div class="similar-container">
+            <div class="similar-container slider-container">
               <div class="similar-card"></div>
             </div>
-          </div>
-        </div>
-    </div>
-    </section>
+          </div> -->
 
-    </div>
+      </section>
+
+      <section class="details-reviews section-mb">
+        <h4 class="details-title-secondary">User reviews</h4>
+        <div class="reviews-container slider-container">
+      </section>
     </div>
   </main>
 </body>
