feat: add layout and stles for hero slider

--- a/src/index.html
+++ b/src/index.html
@@ -56,10 +56,13 @@
   <main class="main-content">
     <div class="container">
       <section class="hero-showcase section-mb">
-        <div class="hero-text">
+        <div class="hero-container">
+          <div class="hero-slider"></div>
+        </div>
+        <!-- <div class="hero-text">
           <h1>Now Trending</h1>
           <img class="hero-image" src="https://picsum.photos/id/1038/600/400" alt="">
-        </div>
+        </div> -->
       </section>
       <section class="top-movies section-mb">
         <div class="top-movies-header top-header">
