feat: add movies page, layout, styles and display items function

--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,10 @@
             <a class="navigation-link" href="/">Home</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="/movie-details.html">Movies</a>
+            <a class="navigation-link" href="/movies.html">Movies</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="/show-details.html">TV Series</a>
+            <a class="navigation-link" href="/shows.html">TV Series</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="/people.html">People</a>
@@ -67,7 +67,7 @@
       <section class="top-movies section-mb">
         <div class="top-movies-header top-header">
           <h2 class="top-movies-title top-title">Top-rated movies</h2>
-          <a class="top-movies-all btn-all" href="/">view all
+          <a class="top-movies-all btn-all" href="/movies.html">view all
             <i class="fa-solid fa-chevron-right"></i>
           </a>
         </div>
@@ -80,7 +80,7 @@
       <section class="top-series section-mb">
         <div class="top-series-header top-header">
           <h2 class="top-series-title top-title">Top-rated TV series</h2>
-          <a class="top-series-all btn-all" href="/">view all
+          <a class="top-series-all btn-all" href="/shows.html">view all
             <i class="fa-solid fa-chevron-right"></i>
           </a>
         </div>
