refactor: change popular movies page layout

--- a/src/movies.html
+++ b/src/movies.html
@@ -54,8 +54,8 @@
     </div>
   </header>
   <main class="main-content">
-    <div class="container popular-movies-container">
-
+    <div class="container">
+      <div class="popular-movies-wrapper"></div>
     </div>
   </main>
 </body>
