feat: add basic layout for movie page title, filters, load more button

--- a/src/movies.html
+++ b/src/movies.html
@@ -55,7 +55,18 @@
   </header>
   <main class="main-content">
     <div class="container">
+      <h1 class="movies-title">Popular in Movies (2024)</h1>
+      <div class="movies-filters">
+        <ul class="movies-filters-list">
+          <li class="movies-filter-item">Sort</li>
+          <li class="movies-filter-item">Genre</li>
+          <li class="movies-filter-item">Sort</li>
+          <li class="movies-filter-item">Production company</li>
+        </ul>
+        <button class="reset-filters">Reset filters</button>
+      </div>
       <div class="popular-movies-wrapper"></div>
+      <button class="load-more">Load more</button>
     </div>
   </main>
 </body>
