feat: add loader while loading API data

--- a/src/shows.html
+++ b/src/shows.html
@@ -27,10 +27,10 @@
             <a class="navigation-link" href="/">Home</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="/movie-details.html">Movies</a>
+            <a class="navigation-link" href="/movies.html">Movies</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="/show-details.html">TV Series</a>
+            <a class="navigation-link" href="/shows.html">TV Series</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="/people.html">People</a>
