fix: add missing loader elements to html pages

--- a/src/movie-details.html
+++ b/src/movie-details.html
@@ -80,6 +80,9 @@
       </section>
     </div>
   </main>
+  <div class="loader-overlay">
+    <div class="loader"></div>
+  </div>
 </body>
 
 </html>
