--- a/src/movies.html
+++ b/src/movies.html
@@ -69,6 +69,9 @@
       <button class="load-more">Load more</button>
     </div>
   </main>
+  <div class="loader-overlay">
+    <div class="loader"></div>
+  </div>
 </body>
 
 </html>
