feat: add show details page with top details section, cast and reviews + functionality

--- a/src/shows.html
+++ b/src/shows.html
@@ -55,7 +55,18 @@
   </header>
   <main class="main-content">
     <div class="container">
-
+      <h1 class="shows-title popular-title">Popular in Movies (2024)</h1>
+      <div class="shows-filters filters">
+        <ul class="shows-filters-list filters-list">
+          <li class="shows-filter-item filter-item">Sort</li>
+          <li class="shows-filter-item filter-item">Genre</li>
+          <li class="shows-filter-item filter-item">Sort</li>
+          <li class="shows-filter-item filter-item">Production company</li>
+        </ul>
+        <button class="reset-filters">Reset filters</button>
+      </div>
+      <div class="popular-shows-wrapper popular-wrapper"></div>
+      <button class="load-more">Load more</button>
     </div>
   </main>
   <div class="loader-overlay">
