--- a/src/show-details.html
+++ b/src/show-details.html
@@ -10,9 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <title>
-    home
-  </title>
+  <title>Document</title>
 </head>
 
 <body>
@@ -54,19 +52,32 @@
     </div>
   </header>
   <main class="main-content">
-    <div class="container">
-      <h1 class="movies-title popular-title">Popular in Movies (2024)</h1>
-      <div class="movies-filters filters">
-        <ul class="movies-filters-list filters-list">
-          <li class="movies-filter-item filter-item">Sort</li>
-          <li class="movies-filter-item filter-item">Genre</li>
-          <li class="movies-filter-item filter-item">Sort</li>
-          <li class="movies-filter-item filter-item">Production company</li>
-        </ul>
-        <button class="reset-filters">Reset filters</button>
+    <div class="container show-details-container">
+      <div class="back-home">
+        <a class="btn btn-back" href="/index.html"><i class="fa-solid fa-chevron-left"></i>Back To Home Page</a>
       </div>
-      <div class="popular-movies-wrapper popular-wrapper"></div>
-      <button class="load-more">Load more</button>
+      <section class="show-details section-mb">
+
+      </section>
+
+      <section class="show-cast section-mb">
+        <h4 class="details-title-secondary">Top Cast</h4>
+        <div class="details-cast slider-container">
+
+        </div>
+        <!-- <div class="details-similar">
+            <h3>More Like This</h3>
+            <div class="similar-container slider-container">
+              <div class="similar-card"></div>
+            </div>
+          </div> -->
+
+      </section>
+
+      <section class="details-reviews section-mb">
+        <h4 class="details-title-secondary">User reviews</h4>
+        <div class="reviews-container slider-container"></div>
+      </section>
     </div>
   </main>
   <div class="loader-overlay">
