feat: add photos and cerdits sections to person details page

--- a/src/movie-details.html
+++ b/src/movie-details.html
@@ -76,7 +76,7 @@
 
       <section class="details-reviews section-mb">
         <h4 class="details-title-secondary">User reviews</h4>
-        <div class="reviews-container slider-container">
+        <div class="reviews-container slider-container"></div>
       </section>
     </div>
   </main>
