--- a/src/person-details.html
+++ b/src/person-details.html
@@ -59,6 +59,20 @@
       <section class="person-details section-mb">
 
       </section>
+      <section class="person-photos section-mb">
+        <h4 class="details-title-secondary">Photos</h4>
+        <div class="photos-container slider-container">
+
+        </div>
+      </section>
+      <section class="person-photos section-mb">
+        <h4 class="details-title-secondary">Credits</h4>
+        <div class="credits-container">
+          <ul class="credits-list">
+
+          </ul>
+        </div>
+      </section>
     </div>
   </main>
   <div class="loader-overlay">
