fix: change styles and parts of functions for consistency

--- a/src/person-details.html
+++ b/src/person-details.html
@@ -68,7 +68,7 @@
       <section class="person-photos section-mb">
         <h4 class="details-title-secondary">Credits</h4>
         <div class="credits-container">
-          <ul class="credits-list">
+          <ul class="credits-list section-list-l">
 
           </ul>
         </div>
