--- a/src/search.html
+++ b/src/search.html
@@ -56,8 +56,8 @@
   <main class="main-content">
     <div class="container">
       <section class="search-results-wrapper">
-        <h1 class="serach-results-title">Search results</h1>
-        <div class="search-results"></div>
+        <h1 class="search-results-title">Search results</h1>
+        <ul class="search-results section-list-l"></ul>
       </section>
     </div>
   </main>
