--- a/src/search.html
+++ b/src/search.html
@@ -57,6 +57,15 @@
     <div class="container">
       <section class="search-results-wrapper">
         <h1 class="search-results-title">Search results</h1>
+        <div class="search-results-filters filters">
+          <ul class="search-results-filters-list filters-list">
+            <li class="search-results-filter-item filter-item">Sort</li>
+            <li class="search-results-filter-item filter-item">Genre</li>
+            <li class="search-results-filter-item filter-item">Sort</li>
+            <li class="search-results-filter-item filter-item">Production company</li>
+          </ul>
+          <button class="reset-filters">Reset filters</button>
+        </div>
         <ul class="search-results section-list-l"></ul>
       </section>
     </div>
