--- a/src/movies.html
+++ b/src/movies.html
@@ -55,7 +55,7 @@
   </header>
   <main class="main-content">
     <div class="container">
-      <h1 class="movies-title popular-title">Popular in Movies (2024)</h1>
+      <h1 class="movies-title popular-title title-page">Popular movies</h1>
       <div class="movies-filters filters">
         <ul class="movies-filters-list filters-list">
           <li class="movies-filter-item filter-item">Sort</li>
