--- a/src/people.html
+++ b/src/people.html
@@ -55,7 +55,7 @@
   </header>
   <main class="main-content">
     <div class="container">
-      <h1 class="shows-title popular-title">Popular Celebs</h1>
+      <h1 class="shows-title popular-title title-page">Popular celebs</h1>
       <div class="shows-filters filters">
         <ul class="shows-filters-list filters-list">
           <li class="shows-filter-item filter-item">Sort</li>
