--- a/src/search.html
+++ b/src/search.html
@@ -56,7 +56,7 @@
   <main class="main-content">
     <div class="container">
       <section class="search-results-wrapper">
-        <h1 class="search-results-title">Search results</h1>
+        <h1 class="search-results-title title-page">Search results</h1>
         <div class="search-results-filters filters">
           <ul class="search-results-filters-list filters-list">
             <li class="search-results-filter-item filter-item">Sort</li>
