feat: update filters layput

--- a/src/search.html
+++ b/src/search.html
@@ -57,14 +57,13 @@
     <div class="container">
       <section class="search-results-wrapper">
         <h1 class="search-results-title title-page">Search results</h1>
-        <div class="search-results-filters filters">
-          <ul class="search-results-filters-list filters-list">
-            <li class="search-results-filter-item filter-item">Sort</li>
-            <li class="search-results-filter-item filter-item">Genre</li>
-            <li class="search-results-filter-item filter-item">Sort</li>
-            <li class="search-results-filter-item filter-item">Production company</li>
+        <div class="search-results-filters">
+          <ul class="search-results-filters-list">
+            <li class="search-results-filter-item">All</li>
+            <li class="search-results-filter-item">Movies</li>
+            <li class="search-results-filter-item">TV Shows</li>
+            <li class="search-results-filter-item">Celebritites</li>
           </ul>
-          <button class="reset-filters">Reset filters</button>
         </div>
         <ul class="search-results section-list-l"></ul>
       </section>
