--- a/src/search.html
+++ b/src/search.html
@@ -59,7 +59,7 @@
         <h1 class="search-results-title title-page">Search results</h1>
         <div class="search-results-filters">
           <ul class="search-results-filters-list">
-            <li class="search-results-filter-item">All</li>
+            <li class="search-results-filter-item search-filter-item-selected">All</li>
             <li class="search-results-filter-item">Movies</li>
             <li class="search-results-filter-item">TV Shows</li>
             <li class="search-results-filter-item">Celebritites</li>
