feat: add pagination

--- a/src/search.html
+++ b/src/search.html
@@ -55,7 +55,7 @@
   </header>
   <main class="main-content">
     <div class="container">
-      <section class="search-results-wrapper">
+      <section class="search-results-wrapper section-mb">
         <h1 class="search-results-title title-page">Search results</h1>
         <div class="search-results-filters">
           <ul class="search-results-filters-list">
@@ -65,10 +65,13 @@
             <li class="search-results-filter-item">Celebritites</li>
           </ul>
         </div>
+        <div class="search-results-heading"></div>
         <ul class="search-results section-list-l"></ul>
+        <div class="search-pagination"></div>
       </section>
     </div>
   </main>
+
   <div class="loader-overlay">
     <div class="loader"></div>
   </div>
