feat: add footer

--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,13 @@
       </section>
     </div>
   </main>
+  <footer class="footer">
+    <div class="container">
+      <p class="footer-text">@ Website is build with help of data from The Movie DB. Made by Evgeniia Zhavoronkova,
+        2024.
+      </p>
+    </div>
+  </footer>
   <div class="loader-overlay">
     <div class="loader"></div>
   </div>
