--- a/src/people.html
+++ b/src/people.html
@@ -66,9 +66,15 @@
         <button class="reset-filters">Reset filters</button>
       </div>
       <div class="popular-people-wrapper popular-wrapper"></div>
-      <button class="load-more">Load more</button>
     </div>
   </main>
+  <footer class="footer">
+    <div class="container">
+      <p class="footer-text">@ Website is build with help of data from The Movie DB. Made by Evgeniia Zhavoronkova,
+        2024.
+      </p>
+    </div>
+  </footer>
   <div class="loader-overlay">
     <div class="loader"></div>
   </div>
