fix: update display hero slider function with new fetch data queries

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,14 @@
     <div class="container">
       <section class="hero-showcase section-mb">
         <div class="hero-container">
-          <div class="hero-slider"></div>
+          <div class="hero-slider">
+            <div class="slider-thumbnails">
+              <div class="thumbnail-item">hello</div>
+              <div class="thumbnail-item tumbnail-active"></div>
+              <div class="thumbnail-item"></div>
+            </div>
+          </div>
+
         </div>
         <!-- <div class="hero-text">
           <h1>Now Trending</h1>
