--- a/movies.html
+++ b/movies.html
@@ -10,9 +10,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <title>
-    home
-  </title>
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <script defer src="app.js"></script>
+  <title> Popular Movies | MSB </title>
 </head>
 
 <body>
@@ -55,18 +56,17 @@
   </header>
   <main class="main-content">
     <div class="container">
-      <h1 class="shows-title popular-title title-page">Popular TV series</h1>
-      <div class="shows-filters filters">
-        <ul class="shows-filters-list filters-list">
-          <li class="shows-filter-item filter-item">Sort</li>
-          <li class="shows-filter-item filter-item">Genre</li>
-          <li class="shows-filter-item filter-item">Sort</li>
-          <li class="shows-filter-item filter-item">Production company</li>
+      <h1 class="movies-title popular-title title-page">Popular movies</h1>
+      <div class="movies-filters filters">
+        <ul class="movies-filters-list filters-list">
+          <li class="movies-filter-item filter-item">Sort</li>
+          <li class="movies-filter-item filter-item">Genre</li>
+          <li class="movies-filter-item filter-item">Sort</li>
+          <li class="movies-filter-item filter-item">Production company</li>
         </ul>
         <button class="reset-filters">Reset filters</button>
       </div>
-      <div class="popular-shows-wrapper popular-wrapper"></div>
-
+      <div class="popular-movies-wrapper popular-wrapper"></div>
     </div>
   </main>
   <footer class="footer">
