--- a/shows.html
+++ b/shows.html
@@ -10,7 +10,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <title>Document</title>
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <script defer src="app.js"></script>
+  <title>Popular Movies | MSB</title>
 </head>
 
 <body>
@@ -52,32 +55,19 @@
     </div>
   </header>
   <main class="main-content">
-    <div class="container movie-details-container">
-      <div class="back-home">
-        <a class="btn btn-back" href="/index.html"><i class="fa-solid fa-chevron-left"></i>Back To Home Page</a>
+    <div class="container">
+      <h1 class="shows-title popular-title title-page">Popular TV series</h1>
+      <div class="shows-filters filters">
+        <ul class="shows-filters-list filters-list">
+          <li class="shows-filter-item filter-item">Sort</li>
+          <li class="shows-filter-item filter-item">Genre</li>
+          <li class="shows-filter-item filter-item">Sort</li>
+          <li class="shows-filter-item filter-item">Production company</li>
+        </ul>
+        <button class="reset-filters">Reset filters</button>
       </div>
-      <section class="movie-details section-mb">
+      <div class="popular-shows-wrapper popular-wrapper"></div>
 
-      </section>
-
-      <section class="movie-cast section-mb">
-        <h4 class="details-title-secondary">Top Cast</h4>
-        <div class="details-cast slider-container">
-
-        </div>
-        <!-- <div class="details-similar">
-            <h3>More Like This</h3>
-            <div class="similar-container slider-container">
-              <div class="similar-card"></div>
-            </div>
-          </div> -->
-
-      </section>
-
-      <section class="details-reviews section-mb">
-        <h4 class="details-title-secondary">User reviews</h4>
-        <div class="reviews-container slider-container"></div>
-      </section>
     </div>
   </main>
   <footer class="footer">
