fix: changed script location

--- a/search.html
+++ b/search.html
@@ -12,7 +12,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
-  <script defer src="app.js"></script>
   <title>
     home
   </title>
@@ -85,6 +84,7 @@
   <div class="loader-overlay">
     <div class="loader"></div>
   </div>
+  <script src="app.js"></script>
 </body>
 
 </html>
