--- a/person-details.html
+++ b/person-details.html
@@ -12,7 +12,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
-  <script defer src="app.js"></script>
   <title>Document</title>
 
 </head>
@@ -89,6 +88,7 @@
   <div class="loader-overlay">
     <div class="loader"></div>
   </div>
+  <script src="app.js"></script>
 </body>
 
 </html>
