--- a/show-details.html
+++ b/show-details.html
@@ -12,7 +12,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
-  <script defer src="app.js"></script>
   <title>Serie Details | MSB</title>
 </head>
 
@@ -93,6 +92,7 @@
   <div class="loader-overlay">
     <div class="loader"></div>
   </div>
+  <script src="app.js"></script>
 </body>
 
 </html>
