fix: change script paths

--- a/search.html
+++ b/search.html
@@ -84,7 +84,7 @@
   <div class="loader-overlay">
     <div class="loader"></div>
   </div>
-  <script src="app.js"></script>
+  <script src="./app.js"></script>
 </body>
 
 </html>
