--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   <div class="loader-overlay">
     <div class="loader"></div>
   </div>
-  <script src="app.js"></script>
+  <script src="./app.js"></script>
 </body>
 
 </html>
