--- a/movies.html
+++ b/movies.html
@@ -78,7 +78,7 @@
   <div class="loader-overlay">
     <div class="loader"></div>
   </div>
-  <script src="app.js"></script>
+  <script src="./app.js"></script>
 </body>
 
 </html>
