--- a/people.html
+++ b/people.html
@@ -80,7 +80,7 @@
   <div class="loader-overlay">
     <div class="loader"></div>
   </div>
-  <script src="app.js"></script>
+  <script src="./app.js"></script>
 </body>
 
 </html>
