fix: remove ext for pages

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a class="navigation-link" href="/">Home</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="movies.html">Movies</a>
+            <a class="navigation-link" href="/movies.html">Movies</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="/shows.html">TV Series</a>
