--- a/people.html
+++ b/people.html
@@ -13,9 +13,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
-  <title>
-    home
-  </title>
+  <title>Popular celebs | MSB</title>
 </head>
 
 <body>
