--- a/person-details.html
+++ b/person-details.html
@@ -13,7 +13,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Document</title>
+  <title>Person Details | MSB</title>
 
 </head>
 
