--- a/person-details.html
+++ b/person-details.html
@@ -13,6 +13,8 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./lib/swiper-bundle.min.css">
+  <script src="./lib/swiper-bundle.min.js"></script>
   <title>Person Details | MSB</title>
 
 </head>
@@ -65,11 +67,13 @@
       </section>
       <section class="person-photos section-mb">
         <h4 class="details-title-secondary">Photos</h4>
-        <div class="photos-container slider-container">
+        <div class="photos-content swiper">
+          <div class="photos-container slider-container swiper-wrapper">
 
+          </div>
         </div>
       </section>
-      <section class="person-photos section-mb">
+      <section class="person-details section-mb">
         <h4 class="details-title-secondary">Credits</h4>
         <div class="credits-container">
           <ul class="credits-list section-list-l">
